2015-08-13  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dominatedhv can now return a decomposition in hyper-rectangles

	* misc/pareto/private/wfg.c (Rlist_hv, Rlist_hv2, Rlist_inclhv)
	(Rlist_inclhv2, Rlist_inclhv3, Rlist_inclhv4, Rlist_exclhv)
	(wfg_compute_decomposition): For each original WFG function that
	returns an hypervolume valume, provide a function that return the
	corresponding decomposition as a collection of signed overlapping
	hyper-rectangles (RLIST structure).
	(Rlist_alloc, Rlist_extend, Rlist_free): Memory management for
	RLIST structures.
	* misc/pareto/private/wfg.h: Define RLIST structure and declare
	some associated functions.
	* misc/pareto/private/stk_dominatedhv_mex.c (compute_hv): Use
	size_t instead of int for unsigned indices.
	(compute_decomposition): New function, similar to compute_hv, but
	return the decomposition instead of the hypervolume value.
	(mexFunction): Use size_t instead of int for unsigned indices. Add
	second input argument to select between computing the hypervolume
	value and computing the decomposition.
	* misc/pareto/stk_dominatedhv.m: Add optional input argument to
	select whether the decomposition into overlapping hyper-rectangles
	must be returned (instead of the hypervolume only). Add unit
	tests.

        stk_mex.h: Define bool type

	* misc/include/stk_mex.h: Define bool type.

2015-08-05  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c (hv): Code simplification

	* misc/pareto/private/wfg.c (hv): Factorize some code for the
	cases n == 3 and n >= 4.

	wfg.c (inclhv4): Put all declarations at the beginning

	* misc/pareto/private/wfg.c (inclhv4): Put all variable
	declarations at the beginning of the function (strict ANSI C).

2015-07-20  Julien Bect  <julien.bect@centralesupelec.fr>

	Use size_t for computations on positive indices.

	* misc/dist/private/stk_dist_matrixx.c: Use size_t for
	computations on positive indices, otherwise we can get very